--- a/CSS/listas.css
+++ b/CSS/listas.css
@@ -2,14 +2,55 @@
     background-color: #6b37b7;
 }
 
-a {
-    color: #ffffff;
-    margin: 10px 10px 10px 10px;
+.tabela-botao{
+    padding: 0px 25px;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
+}
+
+h1 {
+    color: #007bff;
+    padding: 0px 20px;
+}
+
+h2 {
+    color: #666;
+    padding: 20px 20px;
+}
+
+li {
+    float: left;
+}
+
+    li a {
+        display: block;
+        color: #666;
+        text-align: center;
+        padding: 15px 40px;
+        text-decoration: none;
+    }
+
+        li a:hover:not(.active) {
+            background-color: #ddd;
+        }
+
+        li a.active {
+            color: white;
+            background-color: #007bff;
+        }
+
+
 
     a:hover {
         background-color: #0d6efd;
-        color: #ffffff;
+        color: #000;
         text-decoration: none;
     }
 
@@ -19,8 +60,21 @@ table {
 }
 
 th, td {
+
     text-align: left;
     padding: 8px;
+}
+
+.botoes-tabela {
+    width: 600px;
+    height: 50px;
+    text-align: center; 
+    display: inline;
+    padding: 14px 16px;
+    text-decoration: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 tr:nth-child(even) {
@@ -28,14 +82,35 @@ tr:nth-child(even) {
 }
 
 button {
+    padding: 5px 20px !important;
     background-color: #007bff;
     border: none !important;
     color: white !important;
-    padding: 2px 10px !important;
     text-align: center !important;
     text-decoration: none !important;
     display: inline-block !important;
     font-size: 16px !important;
     border-radius: .25rem !important;
     transition: color .15s !important;
+}
+
+.container_acoes {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: left;
+}
+
+
+.acao {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: left;
+    margin-right: 80px !important;
+}
+
+.acao:last-child {
+    margin-right: inherit !important;
 }
