--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,3 +1,4 @@
+
 body {
     text-align: center;
     padding: 180px;
@@ -20,9 +21,9 @@ input {
     font-size: 15px;
     line-height: 1.5;
     color: #666666;
-    width: 250px;
+    width: 270px;
     background: #e6e6e6;
-    height: 50px;
+    height: 65px;
     border-radius: 25px;
     padding: 0 30px 0 30px;
     margin:0px 0px 0px 0px;
@@ -39,7 +40,7 @@ button {
     font-size: 15px;
     color: #fff;
     text-transform: uppercase;
-    width: 250px;
+    width: 270px;
     height: 50px;
     border-radius: 25px;
     background: #007bff;
@@ -47,7 +48,7 @@ button {
     margin: 0px;
     box-sizing: border-box;
     transition: all 0.4s;
-    padding: 0 0px 50px 0;
+    padding: 0 0 65px 0;
 }
 
     button:hover {
